[project]
name = 'jupyter_code_server'
version = '0.2'
description = 'Running the Visual Studio Code Web IDE inside the Jupyter environment'
readme = 'README.md'
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
{name = "Marcel-Brian Wilkowsky", email = "marcel.wilkowsky@uni-paderborn.de"}
]
classifiers = [
"Programming Language :: Python :: 3.8"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."jupyter_serverproxy_servers"]
vscode = "jupyter_code_server:setup_code_server"